# esp32_button

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  构建系统.txt  组件属性.txt
components/CS1237_XGZP131/: CMakeLists.txt  CS1237_XGZP131.c
components/CS1237_XGZP131/include/: CS1237_XGZP131.h
components/My_NVS/: CMakeLists.txt  My_NVS.c
components/My_NVS/include/: My_NVS.h
components/Nokia_5110/: CMakeLists.txt  Nokia_5110.c
components/Nokia_5110/include/: Nokia_5110.h  font5x7.h
components/PowerKey/: CMakeLists.txt  ChatGPT写的.txt  PowerKey.c
components/PowerKey/include/: PowerKey.h
components/PowerMeasure/: CMakeLists.txt  PowerMeasure.c
components/PowerMeasure/include/: PowerMeasure.h
components/ST7567/: CMakeLists.txt  ST7567.c
components/ST7567/include/: ST7567.h  font16x16.h
components/iot_button/: CMakeLists.txt  iot_button.c
components/iot_button/include/: button.h
main/: CMakeLists.txt  main.cpp  res_ico.h  res_power.h
