idf_component_register(SRCS "main.cpp"
                    INCLUDE_DIRS ""
                    "../components/PowerKey/include"
                    "../components/PowerMeasure/include"
                    "../components/CS1237_XGZP131/include"
                    "../components/iot_button/include"
                    "../components/My_NVS/include"
                    "../components/ST7567/include"
                    )
